overflow fix

--- a/styles/style.css
+++ b/styles/style.css
@@ -109,7 +109,7 @@ a:link{
 }
 body {
     max-width: 100%;
-    /* overflow-x: hidden; */
+    overflow-x: hidden;
   }
 .galeria{
     width: 25vw;
